zecore-async-entrypoint/base/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: zecore-async-entrypoint
  annotations:
    configmap.reloader.stakater.com/reload: "zecore-async-entrypoint"
    secret.reloader.stakater.com/reload: "zecore-async-entrypoint"
  name: zecore-async-entrypoint
  namespace: payments
spec:
  replicas: 1
  selector:
    matchLabels:
      app: zecore-async-entrypoint
  strategy:
    rollingUpdate:
      maxSurge: 25%
      maxUnavailable: 25%
    type: RollingUpdate
  template:
    metadata: 
      labels:
        app: zecore-async-entrypoint
    spec:     
      terminationGracePeriodSeconds: 300
      containers:
        - name: zecore-async-entrypoint
          image: luuna/zecore-async-entrypoint:latest
          imagePullPolicy: Always
          command: ["celery"]
          args:  ["-A", "app.celery_server.celery_app", "worker", "-Q", "zecore_async_queue", "--loglevel=info", "--without-heartbeat"]
          livenessProbe:
            exec:
              command:
                - bash
                - -c
                - celery -A app.celery_server.celery_app inspect ping --destination celery@${HOSTNAME}
            initialDelaySeconds: 90
            periodSeconds: 180
            failureThreshold: 5
            successThreshold: 1
            timeoutSeconds: 30
          readinessProbe:
            exec:
              command:
                - bash
                - -c
                - celery -A app.celery_server.celery_app inspect ping --destination celery@${HOSTNAME}
            initialDelaySeconds: 60
            periodSeconds: 120
            failureThreshold: 5
            successThreshold: 1
            timeoutSeconds: 30
          resources:
           requests:
             memory: "250Mi"
             cpu: "250m"
           limits:
             memory: "1000Mi"
             cpu: "500m"
          volumeMounts:
            - mountPath: /tmp
              name: app          
          securityContext:
            readOnlyRootFilesystem: true
            runAsGroup: 10000
            runAsUser: 10000
        - name: zecore-async-entrypoint-api
          image: luuna/zecore-async-entrypoint:latest
          imagePullPolicy: Always
          command: ["gunicorn"]
          args: ["app.celery_server:flask_app"]
          ports:
            - containerPort: 8000
              protocol: TCP
          livenessProbe:
            httpGet:
              path: /_health
              port: 8000
              scheme: HTTP
            failureThreshold: 90
            successThreshold: 1
            periodSeconds: 180
            timeoutSeconds: 30
          readinessProbe:
            httpGet:
              path: /_health
              port: 8000
              scheme: HTTP
            failureThreshold: 60
            successThreshold: 1
            periodSeconds: 120
            timeoutSeconds: 30              
          resources:
            requests:
              memory: "250Mi"
              cpu: "250m"
            limits:
              memory: "500Mi"
              cpu:   "500m"
          volumeMounts:
            - mountPath: /tmp
              name: app          
          securityContext:
            readOnlyRootFilesystem: true
            runAsGroup: 10000
            runAsUser: 10000
      volumes:
      - name: app
        emptyDir: {}            
      enableServiceLinks: true
      imagePullSecrets:
        - name: regcred
      nodeSelector:
        purpose: backend
      restartPolicy: Always
      serviceAccount: zecore-async-entrypoint
      serviceAccountName: zecore-async-entrypoint
