zecore-async-entrypoint/base/networkpolicy.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: zecore-async-entrypoint
  namespace: payments
spec:
  podSelector:
    matchLabels:
      app: zecore-async-entrypoint
  policyTypes:
    - Ingress
    - Egress
  ingress:
    - from:
        - podSelector:
            matchLabels:
              app: zecore-async-entrypoint
      ports:
        - protocol: TCP
          port: 8000
  egress:
    - ports:
        - protocol: TCP
          port: 5671
        - protocol: TCP
          port: 5672
        - protocol: TCP
          port: 15964
